# sisyphus

./: .gitignore  CHECKLIST.md  README.md  go.mod  instructions.md  pyproject.toml
agent/: __init__.py  main.py  man.py  payload.py  push.py
agent/ado/: __init__.py  builds.py  client.py  logs.py
cmd/sisyphus/: main.go
cmd/sisyphus-agent/: main.go
internal/ado/: builds.go  builds_test.go  client.go  logs.go  logs_test.go
internal/man/: man.go
internal/payload/: payload.go  payload_test.go
internal/push/: console.go  push.go
tests/: test_main.py  test_payload_logs.py
