[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sisypnus-agent"
version = "0.1.0"
description = "Terminal agent loop for resolving a failing build."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Scott Beddall" }
]
dependencies = [
  "requests>=2.31",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
sisypnus-agent = "agent.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*"]
